# metashade-mtlx

./: .gitignore  .gitmodules  README.md  gltf_pbr_purple.mtlx  pyproject.toml
lib/: metashade.glsl  metashade.mtlx
libraries/: metashade.glsl  metashade.mtlx  metashade_defs.mtlx  metashade_genglsl_impl.glsl  metashade_genglsl_impl.mtlx  metashade_pbrlib_genglsl_impl.glsl  metashade_pbrlib_genglsl_impl.mtlx  test_dummy_purple_defs.mtlx  test_dummy_purple_genglsl_impl.glsl  test_dummy_purple_genglsl_impl.mtlx  test_metashade_add_color3_defs.mtlx  test_metashade_add_color3_genglsl_impl.glsl  test_metashade_add_color3_genglsl_impl.mtlx
metashade-mtlx/: __init__.py  generate.py
metashade-mtlx/util/: __init__.py  testing.py
metashade_mtlx/: __init__.py  dtypes.py  generate.py
metashade_mtlx/pbrlib/: __init__.py  generalized_schlick_bsdf.py
metashade_mtlx/util/: testing.py
tests/: _base.py  conftest.py  test_basic.py  test_pbrlib_overrides.py  test_purple.py
