[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metashade-mtlx"
description = "MaterialX integration for Metashade shader generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Pavlo Penenko"}
]
dependencies = [
    # Add MaterialX dependencies here when needed
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xvfb; sys_platform == 'linux'",
]
dev = [
    "black",
    "isort",
    "pylint",
]

[tool.pytest.ini_options]
testpaths = ["tests", "metashade/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = [".", "metashade"]

[tool.black]
line-length = 88
target-version = ['py38']
# Include both root project and submodule
include = '\.pyi?$'
extend-exclude = '''
# Exclude build artifacts and MaterialX
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | build
  | dist
  | MaterialX
)/
'''

[tool.isort]
profile = "black"
src_paths = [".", "metashade"]